move MachinePair to api